@@ -1,4 +1,4 @@
 # List of packages to bump:
 # Format: [package_name]@[new_version]
 
-snooker@8.0.0
+snooker@7.2.0
